# pydanticai-test

./: LICENSE  README.md  app.py  pyproject.toml
templates/: index.html
